# kinjo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  flake.nix  package.nix  sonar-project.properties
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  command_config_help.yml  feature_request.yml  install_issue.yml
.github/actions/setup/: action.yml
.github/workflows/: actionlint.yml  audit.yml  ci-test.yml  codeql.yml  fuzz.yml  nix.yml  prepare-release.yml  publish-crate.yml  release-deb.yml  release-macos.yml  release.yml  sonarcloud.yml  update-homebrew-tap.yml
actions/: ssh.toml  workstation.toml
docs/: actions.md  keybindings.md  release-notes.md  releasing.md
docs/adr/: 0001-rule-engine-is-a-supported-extension-point.md  0002-render-reads-the-app-directly.md  0003-command-templates-are-option-safe-by-default.md  0004-dns-sd-txt-is-portable-text.md  0005-discovery-overload-fails-closed.md  0006-rendered-text-cannot-reorder-itself.md
docs/review-backlog/: CONTEXT.md  README.md  TASK_TEMPLATE.md
docs/review-backlog-2/: README.md
docs/review-backlog-2/tasks/: 101-option-injection-from-discovered-values.md  102-recompute-clone-cascade.md  103-render-once-per-tick.md  104-render-duplication.md  105-picker-state-consolidation.md  106-shared-xdg-derivation.md  107-bound-record-growth.md  108-probe-starvation.md  109-library-reentrancy.md  110-input-polish.md  111-portable-dns-sd-txt.md  112-long-txt-keys.md  113-retire-dead-prepare-failure-path.md
docs/review-backlog-3/: CONTEXT.md  README.md  homebrew-tap-check.yml
docs/review-backlog-3/tasks/: 201-release-trust-foundation.md  202-normal-version-pr.md  203-reusable-validation-gate.md  204-read-only-artifact-staging.md  205-retry-safe-publication.md  206-homebrew-pr.md  207-workflow-hardening.md  208-closeout-and-rehearsal.md  209-pin-release-to-merged-commit.md
docs/review-backlog/tasks/: 001-discovery-occurrence-identity.md  002-discovery-session-and-failure-semantics.md  003-discovery-option-validation.md  004-address-predicate-correctness.md  005-compiled-command-rules.md  006-grouped-action-targeting.md  007-transactional-config-reload.md  008-stale-picker-revalidation.md  009-cli-config-directory-handling.md  010-mode-aware-aggregate-views.md  011-scrollable-pickers.md  012-safe-terminal-rendering.md  013-keybindings-and-search-consistency.md  014-selection-filter-and-layout-state.md  015-app-and-rule-engine-refactoring.md  015-app-encapsulation.md  016-remove-implicit-fake-fallback.md  017-fake-backend-heterogeneous-ssh-row.md  018-tui-smoke-test-in-ci.md  019-fake-as-a-selectable-backend.md  020-safe-process-terminal-output.md  021-session-aware-activity-indicator.md  022-rule-engine-seam.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: command_roundtrip.rs  decode_dns_sd.rs  discovery_entry.rs  parse_command.rs  prepare_command.rs
scripts/: bug-report.sh  drive-tui.sh  smoke-tui.sh
scripts/ci/: README.md  enable-core-dumps.sh  report-crash.sh  run-fg.py
scripts/release/: check-artifacts.sh  check-version.sh  lib.sh  test-artifacts.sh  test-homebrew-formula.sh  test-version.sh  update-homebrew-formula.sh
src/: app.rs  cli.rs  config.rs  config_home.rs  crash.rs  discovery.rs  filter.rs  keymap.rs  lib.rs  main.rs  plumber.rs  process.rs  service.rs  terminal.rs  test_support.rs  ui.rs
src/discovery/: entry.rs  fake.rs  inbox.rs  mdns.rs  mod.rs  options.rs  session.rs  txt.rs  worker.rs  zeroconf.rs
src/plumber/: config.rs  exec.rs  mod.rs  template.rs
src/ui/: app.rs  cli.rs  config.rs  display.rs  filter.rs  keymap.rs  layout.rs  mod.rs  render.rs  viewport.rs
tests/: rule_engine_extension.rs
