[package]
name = "avahi-tui"
description = "Avahi TUI: lunch commands for discovered services"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/abbyssoul/avahi-tui"
license-file = "LICENSE"
keywords = ["avahi", "tui", "zeroconf", "dns-sd", "service discovery", "plumber"]
categories = ["command-line-utilities", "network-programming"]



[dependencies]
clap = "4.6.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
futures = "0.3.32"
libc = "0.2.186"
ratatui = "0.30.1"
regex = "1.12.4"
serde = "1.0.228"
serde_derive = "1.0.228"
tokio = "1.52.3"
tokio-util = "0.7.18"
zeroconf-tokio = "0.3.2"
