[package]
name = "kinjo"
description = "Kinjo: mDNS TUI and commands launch for local network services"
version = "0.3.6"
edition = "2024"
readme = "README.md"
repository = "https://github.com/abbyssoul/kinjo"
license-file = "LICENSE"
# crates.io allows at most 5 keywords, letters/digits/`-`/`_` only (no spaces).
keywords = ["avahi", "tui", "zeroconf", "dns-sd", "mdns"]
categories = ["command-line-utilities", "network-programming"]

[package.metadata.deb]
maintainer = "Ivan Ryabov <abbyssoul@gmail.com>"
copyright = "2026, Ivan Ryabov <abbyssoul@gmail.com>"
depends = "$auto"
assets = [
    ["target/release/kinjo", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/kinjo/README.md", "644"],
    ["LICENSE", "usr/share/doc/kinjo/LICENSE", "644"],
    ["actions/*.toml", "etc/kinjo/commands/", "644"],
]


[features]
default = []
# Built-in sample records for development and deterministic TUI smoke tests
# (`--backend fake`). Kept out of production builds unless explicitly enabled.
fake = []
# Alternative discovery backend wrapping the system Avahi/Bonjour stack via
# `zeroconf-tokio` (`--backend zeroconf`). Needs the Avahi client headers on
# Linux, hence off by default.
zeroconf = ["dep:zeroconf-tokio", "tokio/rt-multi-thread"]

[dependencies]
clap = "4.6.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
futures = "0.3.32"
libc = "0.2.186"
ratatui = "0.30.2"
regex = "1.12.4"
serde = "1.0.228"
serde_derive = "1.0.228"
tokio = { version = "1.52.3", features = ["rt", "macros", "time"] }
tokio-util = "0.7.18"
mdns-sd-discovery = "0.2.1"
zeroconf-tokio = { version = "0.3.2", optional = true }
toml = "1.1.2"
unicode-width = "0.2.2"
