[package]
name = "kinjo-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.kinjo]
path = ".."

# Keep this crate out of the parent package's build graph.
[workspace]

[profile.release]
debug = 1

[[bin]]
name = "parse_command"
path = "fuzz_targets/parse_command.rs"
test = false
doc = false
bench = false

[[bin]]
name = "discovery_entry"
path = "fuzz_targets/discovery_entry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_dns_sd"
path = "fuzz_targets/decode_dns_sd.rs"
test = false
doc = false
bench = false
